--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <form>
         <p>Add new book</p>
         <label for="title">Title</label>
-        <input type="text" name="title" id="title" required>
+        <input type="text" name="title" id="title">
         <label for="author">Author</label>
-        <input type="text" name="author" id="author" required>
+        <input type="text" name="author" id="author">
         <label for="pages">Pages</label>
-        <input type="number" name="pages" id="pages" required>
+        <input type="number" name="pages" id="pages">
         <label for="readStatus">Have you read this book?</label>
         <input type="checkbox" name="readStatus" id="readStatus">
-        <button type="submit" id="submit" onsubmit="submit(event)">Submit</button>
+        <button type="button" id="submit" >Submit</button>
       </form>
     </div>
   </main>
